--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
   <div id='abstract'>
     <p>
-      Begin 2020 is gestart met de ontwikkeling van GWSW 2.0, gebaseerd op de in die tijd uitgebrachte NEN NTA 8035 
-      (NTA 8035). GWSW versie 2.0 beschrijft de RDF-implementatie op de NTA 8035 voor de discipline Stedelijk Water.
+      Een beschrijving van het protocol GWSW-OroX  
+      Het GWSW datamodel en datasets uitgedrukt in RDF, RDFS, OWL-2
     </p>
   </div>
   <!--div id='sotd'>
