--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div id='abstract'>
     <p>
       Een beschrijving van het protocol GWSW-OroX  
-      Het GWSW datamodel en datasets uitgedrukt in RDF, RDFS, OWL-2
+      <br/>Het GWSW datamodel en datasets uitgedrukt in RDF, RDFS, OWL-2
     </p>
   </div>
   <!--div id='sotd'>
