--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       };
       </pre-->
 
-  <section class="introductory" data-format="markdown" data-include="main.md"></section>
+  <section data-format="markdown" data-include="main.md"></section>
 
   <!--section>
     <h2><dfn>bar</dfn> attribute</h2>
@@ -82,9 +82,9 @@
     </ol>
   </section-->
 
-  <section id='conformance'>
-    <!-- This section is filled automatically by ReSpec. -->
-  </section>
+  <!-- This section is filled automatically by ReSpec. -->
+  <!--section id='conformance'>
+  </section-->
 
 </body>
 
