--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       };
       </pre-->
 
-  <section data-format="markdown" data-include="main.md"></section>
+  <section class="informative" data-format="markdown" data-include="main.md"></section>
 
   <!--section>
     <h2><dfn>bar</dfn> attribute</h2>
