--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
   </section-->
 
   <!-- This section is filled automatically by ReSpec. -->
-  <!--section id='conformance'>
-  </section-->
+  <section id='conformance'>
+  </section>
 
 </body>
 
