--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset='utf-8'>
   <title>GWSW Ontologie in RDF (versie 1.6)</title>
   <link rel='shortcut icon' type='image/x-icon' href='media/GWSW LogoSmall.ico.gif' />
-  <script src='..../GWSW/tree/master/assets/respec-rioned.js' async class='remove'></script>
+  <script src='...../GWSW/tree/master/assets/respec-rioned.js' async class='remove'></script>
   <script src="./config.js" class='remove'></script>
 </head>
 
