Lokale server toegevoegd

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset='utf-8'>
+  <meta name="viewport" content="width=device-width">
   <title>GWSW Ontologie in RDF (versie 1.6)</title>
   <link rel='shortcut icon' type='image/x-icon' href='media/GWSW LogoSmall.ico.gif' />
   <script src='builds/respec-rioned.js' async class='remove'></script>
@@ -10,6 +11,8 @@
 </head>
 
 <body>
+  <script src="./reload.js" class='remove'></script> <!-- bouwfase (20230522) -->
+
   <!-- section data-format="markdown" data-include="bp-gwsw.md" --></section>
 
   <div id='abstract'>
